--- a/index.html
+++ b/index.html
@@ -4,41 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSONify Form</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Quest/Problem JSONify Tool</h1>
+    <div class="container mt-5">
+        <h1 class="text-center">Quest/Problem JSONify Tool</h1>
         <form id="questForm">
-            <label for="questTitle">Quest Title:</label>
-            <input type="text" id="questTitle" name="questTitle" required>
+            <div class="form-group">
+                <label for="questTitle">Quest Title:</label>
+                <input type="text" class="form-control" id="questTitle" name="questTitle" required>
+            </div>
 
-            <label for="questDescription">Description:</label>
-            <textarea id="questDescription" name="questDescription" required></textarea>
+            <div class="form-group">
+                <label for="questDescription">Description:</label>
+                <textarea class="form-control" id="questDescription" name="questDescription" rows="3" required></textarea>
+            </div>
 
-            <label for="question">Question:</label>
-            <input type="text" id="question" name="question" required>
+            <div class="form-group">
+                <label for="question">Question:</label>
+                <input type="text" class="form-control" id="question" name="question" required>
+            </div>
 
-            <label for="option1">Option 1:</label>
-            <input type="text" id="option1" name="option1" required>
+            <div class="form-group">
+                <label for="option1">Option 1:</label>
+                <input type="text" class="form-control" id="option1" name="option1" required>
+            </div>
 
-            <label for="option2">Option 2:</label>
-            <input type="text" id="option2" name="option2" required>
+            <div class="form-group">
+                <label for="option2">Option 2:</label>
+                <input type="text" class="form-control" id="option2" name="option2" required>
+            </div>
 
-            <label for="option3">Option 3:</label>
-            <input type="text" id="option3" name="option3" required>
+            <div class="form-group">
+                <label for="option3">Option 3:</label>
+                <input type="text" class="form-control" id="option3" name="option3" required>
+            </div>
 
-            <label for="option4">Option 4:</label>
-            <input type="text" id="option4" name="option4" required>
+            <div class="form-group">
+                <label for="option4">Option 4:</label>
+                <input type="text" class="form-control" id="option4" name="option4" required>
+            </div>
 
-            <label for="correctOption">Correct Option (1-4):</label>
-            <input type="number" id="correctOption" name="correctOption" min="1" max="4" required>
+            <div class="form-group">
+                <label for="correctOption">Correct Option (1-4):</label>
+                <input type="number" class="form-control" id="correctOption" name="correctOption" min="1" max="4" required>
+            </div>
 
-            <button type="button" onclick="jsonify()">JSONify</button>
+            <button type="button" class="btn btn-primary" onclick="jsonify()">JSONify</button>
         </form>
 
-        <h2>Generated JSON:</h2>
-        <pre id="jsonOutput"></pre>
+        <h2 class="mt-4">Generated JSON:</h2>
+        <pre id="jsonOutput" class="p-3 bg-light border rounded"></pre>
     </div>
 
     <script src="script.js"></script>
